# rust-chip8-opengl

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: chip8.rs  errors.rs  interface.rs  lib.rs  main.rs  processor.rs
src/interfaces/: interface.rs  mod.rs  opengl_interface.rs  terminal_interface.rs
tests/: chip8.rs  mod.rs  programs.rs  unit_tests.rs
