[package]
name = "rust-chip8-opengl"
description = "A CHIP-8 emulator written in rust. Can be ran as a CLI rendering either to the terminal or using GLFW."
license = "MIT"
repository = "https://github.com/josefwaller/rust-chip8-opengl"
readme = "README.md"
version = "1.0.1"
edition = "2021"

[dev-dependencies]
assert_hex = "0.4.1"

[dependencies]
rand = "0.8"
crossterm = "0.27.0"
clap = { version = "4.5.6", features = ["derive"] }
beryllium = "0.13.0"
glow = "0.13.1"
gl = "0.14.0"
glfw = "0.56.0"
kira = "0.9.2"
