[package]
name = "rust-chip8-opengl"
description = "A CHIP-8 emulator written in rust. Can be ran as a CLI rendering either to the terminal or using GLFW."
license = "MIT"
repository = "https://github.com/josefwaller/rust-chip8-opengl"
readme = "README.md"
version = "1.0.2"
edition = "2021"
include = ["sound.ogg"]

[dev-dependencies]
assert_hex = "0.4.1"

[dependencies]
rand = "0.8"
crossterm = { version = "0.27.0", optional = true }
clap = { version = "4.5.6", features = ["derive"] }
beryllium = { version = "0.13.0", optional = true }
glow = { version = "0.13.1", optional = true }
gl = { version = "0.14.0", optional = true }
glfw = {version = "0.56.0", optional = true }
kira = { version = "0.9.2", optional = true }

[features]
terminal = ["dep:crossterm", "dep:kira"]
open-gl = ["dep:beryllium", "dep:glow", "dep:gl", "dep:glfw", "dep:kira"]
